# driftwood_cli

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  crypto.rs  lib.rs  main.rs  netlify.rs  test.json
src/templates/auth/: code_received.html
src/templates/default/: blog-card-template.html  index-template.html  index.html  lorum_ipsum.md  post-template.html  post.html
