[package]
name = "driftwood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# convert html to markdown
pulldown-cmark = "0.11.0"
# get dates and times
chrono = "0.4.38"
# make easy HTTP requests
reqwest = { version = "0.12", features = ["blocking","json"] }
# async runtime
tokio = { version = "1", features = ["full"] }
# deal with JSON
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1"
# create SHA1 for files
sha1_smol = "1.0.1"
# template engine
tinytemplate = "1.1"